# use

./: .codespell-ignore.txt  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  release-please-config.json
.github/: CODEOWNERS
.github/workflows/: build-and-publish.yaml  lints.yml  release-please.yaml  release.yaml
shell/clink/: use.lua
shell/clink/completions/: use.lua
shell/cmd/: use.cmd
shell/powershell/: posh-use.psd1  posh-use.psm1
src/: colorize.rs  config.rs  config.yaml  context.rs  environment.rs  main.rs  settings.rs  useconfig.yaml
src/init/: mod.rs  use.lua  use.ps1
src/shell/: cmd.rs  debug.rs  mod.rs  powershell.rs
