[package]
name = "use"
version = "1.3.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.53", features = [ "derive" ] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = [ "derive" ] }
serde_yaml = "0.9.33"
regex = "1.11.1"
preferences = "2.0"
semver = "1.0.26"
which = "8.0.0"
once_cell = "1.21.3"
