[package]
name = "useenv"
version = "1.3.1"
edition = "2024"
rust-version = "1.90"
description = "Setup environment defined in a configuration file"
license = "MIT"
repository = "https://github.com/narnaud/use"
readme = "README.md"
keywords = [ "cli", "environment" ]
categories = [ "command-line-utilities", "development-tools" ]
exclude = [ ".github/" ]

[[bin]]
name = "use"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = [ "derive" ] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = [ "derive" ] }
yaml_serde = "0.10.3"
regex = "1.12.3"
preferences = "2.0"
semver = "1.0.26"
which = "8.0.0"
once_cell = "1.21.3"
console = "0.16.2"

[profile.release]
lto = true
strip = true
