[package]
name = "useenv"
version = "1.8.0"
edition = "2024"
rust-version = "1.90"
description = "Setup environment defined in a configuration file"
license = "MIT"
repository = "https://github.com/narnaud/use"
readme = "README.md"
keywords = [ "cli", "environment" ]
categories = [ "command-line-utilities", "development-tools" ]
exclude = [ ".github/" ]

[[bin]]
name = "use"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.0", features = [ "derive" ] }
dirs = "6.0.0"
serde = { version = "1.0.219", features = [ "derive" ] }
yaml_serde = "0.10.4"
regex = "1.12.3"
preferences = "2.0"
semver = "1.0.26"
which = "8.0.2"
console = "0.16.3"

[profile.release]
lto = true
strip = true
